--- a/MAKE87.yml
+++ b/MAKE87.yml
@@ -2,6 +2,6 @@ build_kit:
   name: python3
   version: latest
 provider_endpoints:
-  - name: EXAMPLE_ENDPOINT
-    requester_message_type: make87_messages.text.text_plain.PlainText
-    provider_message_type: make87_messages.text.text_plain.PlainText
+  - name: RELATIVE_PATH_FILE
+    requester_message_type: make87_messages.file.simple_file.RelativePathFile:0.0.83
+    provider_message_type: make87_messages.primitive.bool.Bool:0.0.83
