--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ build-backend = "setuptools.build_meta"
 name = "app"
 version = "0.0.1"
 dependencies = [
-  "make87[storage]",
-  "make87_messages>=0.0.83",
+  "make87[storage]>=0.0.80",
+  "make87_messages>=0.0.85",
 ]
 description = "A small example package"
 readme = "README.md"
